--- a/views/pages/warehouse/package/list-all.ejs
+++ b/views/pages/warehouse/package/list-all.ejs
@@ -30,6 +30,14 @@
         >
         Add to Cube
         </button>
+        <button
+        id="add-to-nodoc-button"
+        data-toggle="modal"
+        data-target="#add-to-nodoc-modal"
+        class="btn btn-primary btn-round float-right mr-2 ml-md-auto"
+        >
+        Add to NoDoc
+        </button>
         <% if (buttonName === 'Add to Delivery') { %>
           <button
             id="add-to-delivery-button"
@@ -161,6 +169,48 @@
         </div>
         <div class="modal-footer">
           <button type="submit" class="btn btn-primary">Add</button>
+          <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
+<!-- Add Packages To nodoc -->
+<div
+  class="modal fade"
+  id="add-to-nodoc-modal"
+  tabindex="-1"
+  role="dialog"
+  aria-labelledby="print-popup"
+  aria-hidden="true"
+  style="display: none;"
+>
+  <div class="modal-dialog" role="document">
+    <form id="add-to-nodoc-form" method="post">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h2 class="modal-title">Add Packages to NoDoc</h2>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">×</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <input type="text" hidden name="packageIds" />
+          <div class="form-group">
+            <label for="location">Location</label>
+            <select id="location" name="location" class="form-control" required>
+              <option></option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="zoneId">Zone</label>
+            <select id="zoneId" name="zoneId" class="form-control" required>
+              <option></option>
+            </select>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="submit" class="btn btn-primary">Save</button>
           <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
         </div>
       </div>
