--- a/views/pages/warehouse/manifest/list.ejs
+++ b/views/pages/warehouse/manifest/list.ejs
@@ -16,6 +16,7 @@
               <th>Plane</th>
               <th></th>
               <th></th>
+              <th></th>
             </tr>
           </thead>
           <tbody>
@@ -38,6 +39,13 @@
               <td><%= helpers.formatDate(manifest.createdAt) %></td>
               <td><%= manifest.plane &&  manifest.plane.tailNumber%></td>
               <td class="text-center">
+                <a 
+                data-toggle="modal"
+                data-id="<%=manifest.id%>"
+                data-target="#change-manifest-status"
+                class="btn btn-link btn-primary btn-manifest-status px-3"><i class="fa fa-edit"></i></a> 
+              </td>
+              <td class="text-center">
                 <a href='manage/<%=manifest.id%>/get' class="btn btn-link btn-primary px-3" data-toggle="tooltip"
                   data-original-title="View Details"> <i class="fa fa-eye"></i> </a>
                 <!-- temporary commenting the code -->
@@ -59,4 +67,42 @@
   </div>
 </div>
 
+<!-- Change Status of Manifest -->
+<div
+  class="modal fade"
+  id="change-manifest-status"
+  tabindex="-1"
+  role="dialog"
+  aria-labelledby="Manifest Status"
+  aria-hidden="true"
+  style="display: none;"
+>
+  <div class="modal-dialog" role="document">
+    <form id="change-manifest-status-form" method="post">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h2 class="modal-title">ManifestStatus</h2>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">×</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <input type="text" name="mid" hidden id="ManifestIdStatus" />
+          <div class="form-group">
+            <label for="mstatus">Manifest Status</label>
+            <select id="mstatus" name="mstatus" class="form-control" required>
+              <option></option>
+            </select>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="submit" class="btn btn-primary">Save</button>
+          <button type="button" class="btn btn-danger close-del" data-dismiss="modal">Cancel</button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
+
+<% block('scripts').append('<script src="/js/utils.js"></script>')%>
 <% block('scripts').append('<script src="/js/warehouse/manifest/list.js"></script>')%>
