no docs pkg added

--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -92,6 +92,11 @@
 									<span class="sub-item">No Docs</span>
 								</a>
 							</li>
+							<li <% if (page.includes('/fll/package/no-docs')) { %> class="active" <% } %>>
+								<a href="/warehouse/fll/package/no-docs">
+									<span class="sub-item">No Docs - Pkgs</span>
+								</a>
+							</li>
 							<li <% if (page.includes('/fll/awb/list')) { %> class="active" <% } %>>
 								<a href="/warehouse/fll/awb/list">
 									<span class="sub-item">AirWay Bills</span>
