--- a/views/shared/__main_header.ejs
+++ b/views/shared/__main_header.ejs
@@ -33,6 +33,7 @@
 							<option selected value="default">Choose...</option>
 							<option value="Package">Package</option>
 							<option value="Customer">Customer</option>
+							<option value="Original">Original</option>
 							<option value="Awb">Awb</option>
 						</select>
 						<input type="text" class="form-control" autocomplete="off" placeholder="Search..." id="group-search-input-field" style="width: 240px;" aria-label="Text input with dropdown button">
