--- a/views/pages/warehouse/awb/preview.ejs
+++ b/views/pages/warehouse/awb/preview.ejs
@@ -99,7 +99,7 @@
                             <td><strong>Tracking No</strong></td>
                             <td class="text-center"><strong>Description</strong></td>
                             <td class="text-center"><strong>Type</strong></td>
-                            <!-- <td class="text-center"><strong>Price</strong></td> -->
+                            <td class="text-center"><strong>Dimensions</strong></td>
                             <td class="text-right"><strong>Weight</strong></td>
                             <td></td>
                           </tr>
@@ -114,7 +114,7 @@
                             <td><%= package.trackingNo%></td>
                             <td class="text-center"><%= package.description%></td>
                             <td class="text-center"><%= package.packageType%></td>
-                            <!-- <td class="text-center"><%= package.price%></td> -->
+                            <td class="text-center"><%= package.dimensions%></td>
                             <td class="text-right"><%= Number(package.weight).toFixed(2)%>
                               <%= package.packageCalculation||'kg' %></td>
                               <td class="text-center">
@@ -174,6 +174,10 @@
             <h6 class="text-uppercase mt-4 mb-3 fw-bold">
               Notes
             </h6>
+            <p>
+              <strong>Creator of AWB</strong>: <%= awb.createdBy %> </br>
+              <strong>Date/Time of Creation</strong>: <%= awb.dateCreated %>
+            </p>
             <p class="text-muted mb-0">
               We really appreciate your business and if there's anything else we can do, please let us know! Also,
               should you need us to add VAT or anything else to this order, it's super easy since this is a template, so
