moving nodocs pkgs from FLL to NAS

--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -92,11 +92,6 @@
 									<span class="sub-item">No Docs</span>
 								</a>
 							</li>
-							<li <% if (page.includes('/fll/awb/no-docs-packages')) { %> class="active" <% } %>>
-								<a href="/warehouse/fll/awb/no-docs-packages">
-									<span class="sub-item">No Docs Packages</span>
-								</a>
-							</li>
 							<li <% if (page.includes('/fll/awb/list')) { %> class="active" <% } %>>
 								<a href="/warehouse/fll/awb/list">
 									<span class="sub-item">AirWay Bills</span>
@@ -128,6 +123,11 @@
 							<li <% if (page.includes('/nas/awb/no-docs')) { %> class="active" <% } %>>
 								<a href="/warehouse/nas/awb/no-docs">
 									<span class="sub-item">No Docs</span>
+								</a>
+							</li>
+							<li <% if (page.includes('/fll/awb/no-docs-packages')) { %> class="active" <% } %>>
+								<a href="/warehouse/fll/awb/no-docs-packages">
+									<span class="sub-item">No Docs - Pkgs</span>
 								</a>
 							</li>
 							<li <% if (page.includes('/nas/manifest/incoming')) { %> class="active" <% } %>>
