--- a/views/pages/warehouse/package/aging.ejs
+++ b/views/pages/warehouse/package/aging.ejs
@@ -19,6 +19,7 @@
                                     <th>PMB#</th>
                                     <th>Type</th>
                                     <th>Aging</th>
+                                    <th>Aging $</th>
                                     <th>Weight</th>
                                     <th>Number of Pieces</th>
                                     <th>Status</th>
@@ -60,7 +61,10 @@
                                                         <%= pkg.packageType %>
                                                     </td>
                                                     <td>
-                                                        <%= pkg.aging %>
+                                                        <%= pkg.aging ? pkg.aging:'' %>
+                                                    </td>
+                                                    <td>
+                                                        $<%= pkg.agingdollar ? pkg.agingdollar:0 %>
                                                     </td>
                                                     <td>
                                                         <%= pkg.weight%>
