--- a/views/pages/warehouse/awbprice/list-all.ejs
+++ b/views/pages/warehouse/awbprice/list-all.ejs
@@ -123,7 +123,7 @@
         <div class="modal-body">
           <div class="col-sm-12 text-center">@</div>
           <div class="col-sm-12 text-center">www.postboxesetc.com</div>
-          <div class="col-sm-12 text-center">Invoice $:$</div>
+          <div class="col-sm-12 text-center">Invoice $:$<span id="total-value-invoice"></span></div>
           <div class="col-sm-1 text-left h3">Charges</div>
             <div class="row gutters">
               <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
@@ -221,9 +221,9 @@
                           </div>
                         </div>
                         <div class="form-group form-show-validation row">
-                          <label for="Freight" class="col-lg-3 col-md-4 col-sm-4 mt-sm-2 text-right">invoice value </label>
+                          <label for="Freight" class="col-lg-3 col-md-4 col-sm-4 mt-sm-2 text-right">Total Weight </label>
                           <div class="col-lg-7 col-md-8 col-sm-8">
-                            <input type="number" class="form-control-plaintext" id="total_invoice_value"  placeholder="Total value" readonly>
+                            <input type="number" class="form-control-plaintext" id="total_weight_value"  placeholder="Total value" readonly>
                           </div>
                         </div>
                         <div class="form-group form-show-validation row">
