--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -59,6 +59,12 @@
 						<p>Zones </p>
 					</a>
 				</li>
+				<li class="nav-item <% if (page.includes('/invoices/')) { %> active <% } %>">
+					<a href="/admin/invoices/list">
+						<i class="fa fa-shield-alt"></i>
+						<p>Invoices </p>
+					</a>
+				</li>
 				<% } %>
 
 				<li class="nav-section">
