--- a/views/shared/__template.ejs
+++ b/views/shared/__template.ejs
@@ -33,6 +33,7 @@
 	<link
 		href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css"
 		rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="/assets/css/daterangepicker.css" />
 </head>
 
 <body>
@@ -202,6 +203,9 @@
 
 	<script src="/assets/js/global-search.js"></script>
 
+	<!-- Date Range Picker -->
+	<script type="text/javascript" src="/assets/js/plugin/daterangepicker/moment.min.js"></script>
+	<script type="text/javascript" src="/assets/js/plugin/daterangepicker/daterangepicker.js"></script>
 	<%- block('scripts').toString() %>
 
 	<script>
