--- a/views/pages/warehouse/package/list-all.ejs
+++ b/views/pages/warehouse/package/list-all.ejs
@@ -61,7 +61,12 @@
       </div>
       </div>
       <div class="card-body">
-        <table id = "package-table" class="display table table-responsive table-striped table-hover dataTable package-table">
+        <div class="table-responsive p-4">
+          <div class="d-flex w-100 d-inline-block col-xs-10 col-sm-3 float-right ">
+            <label class="w-10-rem align-text-bottom">Select Dates : </label>
+            <input type="text" class="form-control form-control-sm" name="daterange" id="daterange" value=""  placeholder="Select dates"/>
+          </div>
+        <table id = "package-table" class="display table table-striped table-hover dataTable package-table">
           <thead>
             <tr>
               <th><input id="checkall" type="checkbox" class="package-select-all" /></th>
@@ -96,7 +101,7 @@
                 <% } else { %>
                   <td> - </td>
                   <% } %>
-              <td><a class="text-decoration-none" href="../../nas/awb/manage/<%=pkg.awbId._id%>/preview"><b><%= pkg.express ? '*': '' %></b><%= pkg.awbId.awbId %> </a></td>
+              <td><a class="text-decoration-none" href="../../nas/awb/manage/<%=pkg.awbId ? pkg.awbId._id: '#'%>/preview"><b><%= pkg.express ? '*': '' %></b><%= pkg.awbId.awbId %> </a></td>
               <td><%= pkg.originBarcode ? pkg.originBarcode.barcode: ''%></td>
               <td><%= pkg.packageNumber ? pkg.packageNumber : ''%></td>
               <td><%= pkg.description %></td>
@@ -110,7 +115,7 @@
               <td><%= pkg.weight%></td>
               <td><%= (pkg.pieces || pkg.pieces > -1) ? pkg.pieces : ''%></td>
               <td class="lastStatusText_field"><%= pkg.lastStatusText %></td>
-              <td><%= pkg.OrignalBarcodeDate %></td>
+              <td class="table-date-created"><%= pkg.OrignalBarcodeDate %></td>
               <td><%= pkg.awbCreatedAt %></td>
               <td><%= pkg.actualFlight %></td>
               <!-- <td><a href="../pkg-label/download/<%=pkg._id%>"><i class="fa fa-download"></i></a></td> -->
@@ -129,6 +134,7 @@
             <%})%>
           </tbody>
         </table>
+        </div>
       </div>
     </div>
   </div>
@@ -321,6 +327,5 @@
     </div>
   </div>
 </div>
-
 <% block('scripts').append('<script src="/js/utils.js"></script>')%>
 <% block('scripts').append('<script src="/js/warehouse/package/list-all.js"></script>')%>
