--- a/views/pages/warehouse/awbprice/list-all.ejs
+++ b/views/pages/warehouse/awbprice/list-all.ejs
@@ -31,8 +31,8 @@
               <th>Pmb</th>
               <th>AWB NUMBER</th>
               <th>Shipper</th>
-              <th>Driver</th>
               <th>Carrier</th>              
+              <th>Final Price</th>
               <th>Price Add</th>
               <th></th>
               <th></th>
@@ -54,15 +54,15 @@
                 <td> - </td>
               <% } %> 
               <td><%= awb['customerId']?awb['customerId'].pmb:''%></td>
-              <td><a href="../../warehouse/nas/awb/manage/<%=awb._id%>/preview"></a><%= awb.awbId %></a></td>
+              <td><a class="text-decoration-none" href="../../warehouse/nas/awb/manage/<%=awb._id%>/preview"><%= awb.awbId %></a></td>
               <% if (awb['shipper'] && awb['shipper'].name) { %>
                 <td><%= awb['shipper'].name %>
                 </td>
               <% } else { %>
                 <td> - </td>
               <% } %> 
-              <td><%= (awb.driver && awb.driver.name)?awb.driver.name:'' %></td>
               <td><%= (awb.carrier && awb.carrier.name)?awb.carrier.name:'' %></td>
+              <td><%= awb.awbPriceLabel || ''%></td>
               
               <td><a class="btn btn-link btn-primary btn-edit-pricelabel" data-toggle="modal" data-id="<%=awb._id%>"
                   data-original-title="Add Price" data-target="#pricelabel-popup"><i class="fa fa-edit"></i></a>
@@ -181,7 +181,7 @@
                           </div>
                         </div>
                         <div class="form-group form-show-validation row">
-                          <label for="TotalWet" class="col-lg-4 col-md-4 col-sm-4 mt-sm-2 text-right">TotalWet</label>
+                          <label for="TotalWet" class="col-lg-4 col-md-4 col-sm-4 mt-sm-2 text-right">Total Price</label>
                           <div class="col-lg-8 col-md-8 col-sm-8">
                             <input type="number" class="form-control-plaintext" id="TotalWet" name="TotalWet" placeholder="TotalWet" readonly>
                           </div>
