WildCard Tracking Testing

--- a/views/pages/warehouse/package/list-all.ejs
+++ b/views/pages/warehouse/package/list-all.ejs
@@ -61,11 +61,11 @@
       </div>
       </div>
       <div class="card-body">
+        <div class="d-flex w-100 d-inline-block col-xs-10 col-sm-3 float-left ">
+          <label class="w-10-rem align-text-bottom">Select Dates : </label>
+          <input type="text" class="form-control form-control-sm" name="daterange" id="daterange" value=""  placeholder="Select dates"/>
+        </div>
         <div class="table-responsive p-4">
-          <div class="d-flex w-100 d-inline-block col-xs-10 col-sm-3 float-right ">
-            <label class="w-10-rem align-text-bottom">Select Dates : </label>
-            <input type="text" class="form-control form-control-sm" name="daterange" id="daterange" value=""  placeholder="Select dates"/>
-          </div>
         <table id = "package-table" class="display table table-striped table-hover dataTable package-table">
           <thead>
             <tr>
