--- a/views/pages/warehouse/awb/no-docs.ejs
+++ b/views/pages/warehouse/awb/no-docs.ejs
@@ -6,7 +6,8 @@
         <h4 class="card-title"><%=title%></h4>
       </div>
       <div class="card-body">
-        <table id='no-docs-table' class='display table-responsive table table-striped table-hover dataTable'>
+        <div class="table-responsive">
+        <table id='no-docs-table' class='display table table-striped table-hover dataTable'>
           <thead>
             <tr>
               <th>Customer Name</th>
@@ -53,6 +54,7 @@
             <% }}) %>
           </tbody>
         </table>
+      </div>
       </div>
     </div>
   </div>
