--- a/views/pages/warehouse/price/list-all.ejs
+++ b/views/pages/warehouse/price/list-all.ejs
@@ -22,8 +22,9 @@
         <div class="card-title"><%= title %></div>
       </div>
       <div class="card-body">
+        <div class="table-responsive">
         <table id="pricelabel-table"
-          class="display table table-responsive table-striped table-hover dataTable pricelabel-table">
+          class="display table table-striped table-hover dataTable pricelabel-table">
           <thead>
             <tr>
               <th></th>
@@ -81,6 +82,7 @@
             <%})%>
           </tbody>
         </table>
+        </div>
       </div>
     </div>
   </div>
