--- a/views/pages/fleet/vehicle/list.ejs
+++ b/views/pages/fleet/vehicle/list.ejs
@@ -9,10 +9,12 @@
         </div>
       </div>
       <div class="card-body">
+        <div class="table-responsive">
         <table class="display table table-striped table-hover dataTable vehicle-table">
           <thead>
             <tr>
               <th>Make</th>
+              <th>Date Created</th>
               <th>Model</th>
               <th>License Plate</th>
               <th>Driver</th>
@@ -24,6 +26,7 @@
             <% vehicles.forEach(function(vehicle){%>
             <tr data-record="<%= vehicle.id %>">
               <th scope="row"><%=vehicle.vehicleMake%></th>
+              <td><%=helpers.formatDate(vehicle.createdAt)%></td>
               <td><%=vehicle.model%></td>
               <td><%=vehicle.registration%></td>
               <td><%=vehicle.driver.firstName + ' ' + vehicle.driver.lastName%></td>
@@ -35,6 +38,7 @@
             <%})%>
           </tbody>
         </table>
+        </div>
       </div>
     </div>
   </div>
