--- a/views/pages/warehouse/airline/list.ejs
+++ b/views/pages/warehouse/airline/list.ejs
@@ -13,6 +13,7 @@
               <tr>
                 <!-- <th>ID</th> -->
                 <th>Name</th>
+                <th>Date Created</th>
                 <th>Contact Name</th>
                 <th>Action</th>
               </tr>
@@ -21,6 +22,7 @@
               <% airlines.forEach(function(airline){%>
               <tr data-record="<%= airline.id %>">
                 <td><strong><%=airline.name%></strong></td>
+                <td><%=helpers.formatDate(airline.createdAt)%></td>
                 <td><%=helpers.getFullName(airline)%></td>
                 <td>
                   <a href='manage/<%=airline.id%>/get'><i class="fas fa-pen"></i></a>
