--- a/views/pages/warehouse/awbprice/list-all.ejs
+++ b/views/pages/warehouse/awbprice/list-all.ejs
@@ -22,11 +22,17 @@
         <div class="card-title"><%= title %></div>
       </div>
       <div class="card-body">
+        <div class="d-flex w-100 d-inline-block col-xs-10 col-sm-3 float-left ">
+          <label class="w-10-rem align-text-bottom">Select Dates : </label>
+          <input type="text" class="form-control form-control-sm" name="daterange" id="daterange" value=""  placeholder="Select dates"/>
+        </div>
+        <div class="table-responsive">
         <table id="pricelabel-table"
-          class="display table table-responsive table-striped table-hover dataTable pricelabel-table">
+          class="display table table-striped table-hover dataTable pricelabel-table">
           <thead>
             <tr>
               <th></th>
+              <th>Date Created</th>
               <th>Consignee</th>
               <th>Pmb</th>
               <th>AWB NUMBER</th>
@@ -45,6 +51,7 @@
                 <input type="checkbox" class="package-select" />
                 <input class="checkPriceLabelExistPkg" value="<%=awb._id %>" hidden/>
               </td>
+              <td><%= awb.createdAt%></td>
               <% if (awb['customerId']) { %>
                 <td><%= (awb['customerId'].lastName ? 
                   `${awb['customerId'].firstName} ${awb['customerId'].lastName}` : 
@@ -78,6 +85,7 @@
             <%})%>
           </tbody>
         </table>
+      </div>
       </div>
     </div>
   </div>
@@ -283,5 +291,5 @@
   </div>
 </div>
 
-<% block('scripts').append('<script src="/js/utils.js"></script>')%>
+<!-- <% block('scripts').append('<script src="/js/utils.js"></script>')%> -->
 <% block('scripts').append('<script src="/js/warehouse/price/list-all.js"></script>')%>
