--- a/views/pages/warehouse/package/aging.ejs
+++ b/views/pages/warehouse/package/aging.ejs
@@ -14,6 +14,7 @@
                             <thead>
                                 <tr>
                                     <th>Customer Name</th>
+                                    <th>Date Created</th>
                                     <th>Original Tracking No</th>
                                     <th>Description</th>
                                     <th>PMB#</th>
@@ -47,6 +48,9 @@
                                             <% } else { %>
                                                 <td> - </td>
                                                 <% } %>
+                                                    <td>
+                                                        <%=helpers.formatDate(pkg.createdAt)%>
+                                                    </td>
                                                     <td>
                                                         <%= (pkg.originBarcode && pkg.originBarcode.barcode) ? pkg.originBarcode.barcode : ''%>
                                                     </td>
