--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -196,6 +196,7 @@
         <thead>
           <tr>
             <th>Package ID#</th>
+            <!-- <th>Date Created</th> -->
             <th>Package Status</th>
             <th>Awb Number</th>
             <th>Customer Email</th>
@@ -264,6 +265,7 @@
           <thead>
             <tr>
               <th>Package ID#</th>
+              <!-- <th>Date Created</th> -->
               <th>Package Status</th>
               <th>Awb Number</th>
               <th>Customer Email</th>
@@ -291,6 +293,7 @@
           <thead>
             <tr>
               <th>Username</th>
+              <!-- <th>Date Created</th> -->
               <th>Name</th>
               <th>Total AWB Created</th>
               <th>User Email</th>
