--- a/views/pages/store/store-check-in.ejs
+++ b/views/pages/store/store-check-in.ejs
@@ -12,7 +12,7 @@
           </ul>
         </div>
       </div>
-      <div class="card-body">
+      <div class="card-body daterangepickerbody">
 		<div class="separator-solid"></div>
         <div class="tab-content m-4" id="awb-list-tabContent">
           <div class="tab-pane fade show active" id="cableBeachList" role="tabpanel" aria-labelledby="awb-list-tab">
