--- a/views/pages/warehouse/cube/list.ejs
+++ b/views/pages/warehouse/cube/list.ejs
@@ -10,7 +10,7 @@
           data-target="#addCube2-popup"
         >Add Cube2</button>        
       </div>
-      <div class="card-body">
+      <div class="card-body daterangepickerbody">
         <div class="table-responsive">
           <table id="cubeTable" class="display table dataTable table-striped table-hover">
             <thead>
