--- a/views/pages/warehouse/delivery/list.ejs
+++ b/views/pages/warehouse/delivery/list.ejs
@@ -9,7 +9,7 @@
                     </h3>
                     <a href='create' class='btn btn-primary btn-round float-right ml-md-auto text-white' data-toggle='modal' data-target='#addDelivery'>Create Delivery</a>
                 </div>
-                <div class="card-body">
+                <div class="card-body daterangepickerbody">
                     <div class="table-responsive">
                     <table class="display table table-striped table-hover dataTable delivery-table">
                         <thead>
