--- a/views/pages/warehouse/package/list-all.ejs
+++ b/views/pages/warehouse/package/list-all.ejs
@@ -60,7 +60,7 @@
         <% } %> 
       </div>
       </div>
-      <div class="card-body">
+      <div class="card-body daterangepickerbody">
         <div class="table-responsive p-4">
         <table id = "package-table" class="display table table-striped table-hover dataTable package-table">
           <thead>
