--- a/views/shared/__template.ejs
+++ b/views/shared/__template.ejs
@@ -202,7 +202,10 @@
 	<script src="/assets/js/plugin/print/print.min.js"></script>
 
 	<script src="/assets/js/global-search.js"></script>
-
+	
+	<!-- Dashboard js -->
+	<script src="/assets/js/dashboard.js"></script>
+	
 	<!-- Date Range Picker -->
 	<script type="text/javascript" src="/assets/js/plugin/daterangepicker/daterangepicker.js"></script>
 	<%- block('scripts').toString() %>
