--- a/views/pages/admin/invoice/list.ejs
+++ b/views/pages/admin/invoice/list.ejs
@@ -6,12 +6,13 @@
         <div class="card-title"><%= title %></div>
        
       </div>
-      <div class="card-body">
+      <div class="card-body daterangepickerbody">
+        <div class="table-responsive">
         <table class="display table table-striped table-hover dataTable invoice-table ">
           <thead>
             <tr>
-              <th>Date</th>
               <th>Awb Number</th>              
+              <th>Date</th>
               <th>Invoice</th>
               <th></th>
             </tr>
@@ -19,8 +20,8 @@
           <tbody>
             <% invoices.forEach(invoice => { %>
             <tr data-record="<%=invoice._id%>">
-              <td><%= helpers.formatDate(invoice.createdAt)%></td>
               <td><a class="text-decoration-none" href="/warehouse/nas/awb/manage/<%=invoice.awbId ? invoice.awbId._id: '#'%>/preview"><%= invoice.awbId.awbId %> </a></td>
+              <td><%= helpers.formatDate(invoice.createdAt)%></td>
               <td><a href="JavaScript:Void(0);"  onclick="downloadInvoice('<%=invoice.fileName%>')">Invoice</td>                          
               <td><a href="JavaScript:Void(0);"  onclick="deleteInvoice('<%=invoice.fileName%>','<%=invoice._id%>')"><i class="fa fa-trash"></i></td>                          
               
@@ -28,6 +29,7 @@
             <% }) %>
           </tbody>
         </table>
+        </div>
       </div>
     </div>
   </div>
