--- a/views/pages/fleet/plane/list.ejs
+++ b/views/pages/fleet/plane/list.ejs
@@ -6,7 +6,7 @@
         <div class="card-title"><%= title%></div>
         <a href='create' class='btn btn-primary btn-round ml-md-auto float-right'>Add Plane</a>
       </div>
-      <div class="card-body">
+      <div class="card-body daterangepickerbody">
         <div class="table-responsive">
         <table class="display table table-striped table-hover dataTable plane-table">
           <thead>
