--- a/views/pages/warehouse/awb/no-docs-packages.ejs
+++ b/views/pages/warehouse/awb/no-docs-packages.ejs
@@ -12,7 +12,7 @@
           </ul>
         </div>
       </div>
-      <div class="card-body">
+      <div class="card-body daterangepickerbody">
         <div class="tab-content m-4" id="awb-list-tabContent">
           <div class="tab-pane fade show active" id="awb-list" role="tabpanel" aria-labelledby="awb-list-tab">
             <div class="table-responsive">
