--- a/views/pages/warehouse/awbprice/list-all.ejs
+++ b/views/pages/warehouse/awbprice/list-all.ejs
@@ -21,7 +21,7 @@
       <div class="card-header d-flex align-items-left align-items-md-center flex-column flex-md-row">
         <div class="card-title"><%= title %></div>
       </div>
-      <div class="card-body">
+      <div class="card-body daterangepickerbody">
         <div class="d-flex w-100 d-inline-block col-xs-10 col-sm-3 float-left ">
           <label class="w-10-rem align-text-bottom">Select Dates : </label>
           <input type="text" class="form-control form-control-sm" name="daterange" id="daterange" value=""  placeholder="Select dates"/>
