--- a/views/pages/warehouse/container/list.ejs
+++ b/views/pages/warehouse/container/list.ejs
@@ -8,7 +8,7 @@
         <div class="card-title"><%=title%></div>
         <a href="create" class="btn btn-primary btn-round float-right ml-md-auto">Add Container</a>
       </div>
-      <div class="card-body">
+      <div class="card-body daterangepickerbody">
         <div class="table-responsive">
           <table id="containerTable" class="display table dataTable table-striped table-hover">
             <thead>
