--- a/views/pages/warehouse/hazmat/list.ejs
+++ b/views/pages/warehouse/hazmat/list.ejs
@@ -7,7 +7,7 @@
         <a href='#' data-target="#add-hazmat" data-toggle='modal'
           class='btn btn-primary btn-round ml-md-auto float-right'>Add New HAZMAT Class</a>
       </div>
-      <div class="card-body">
+      <div class="card-body daterangepickerbody">
         <div class="table-responsive">
           <table id="hazmatTable" class="display table table-striped table-hover">
             <thead>
