--- a/views/pages/warehouse/package/list.ejs
+++ b/views/pages/warehouse/package/list.ejs
@@ -8,7 +8,7 @@
                     </div>
                     <!-- <a href='create' class='btn btn-primary btn-round float-right ml-md-auto'>Add User</a> -->
                 </div>
-                <div class="card-body">
+                <div class="card-body daterangepickerbody">
                     <div class="table-responsive">
                         <table id="package-table" class="display table table-striped table-hover dataTable package-table">
                             <thead>
