--- a/views/pages/warehouse/package/no-docs.ejs
+++ b/views/pages/warehouse/package/no-docs.ejs
@@ -5,7 +5,7 @@
       <div class="card-header">
         <h4 class="card-title"><%=title%></h4>
       </div>
-      <div class="card-body">
+      <div class="card-body daterangepickerbody">
         <table id='package-table' class='display table-responsive table table-striped table-hover dataTable package-table'>
           <thead>
             <tr>
